--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -538,15 +538,19 @@ a:hover {
 
 html,
 body {
+	width:1280px;
     height: 100%;
     font-size: 10px;
     background-color: #ffffff;
 }
 body {
-    color: #000000;
+    color: #ffffff;
     text-align: center;
     font-family:Microsoft YaHei;
-    margin:20px;
+    margin-left:40px;
+    margin-right:30px;
+    
+    
    
 }
 
