--- a/bootstrap/css/smallScreen.css
+++ b/bootstrap/css/smallScreen.css
@@ -231,21 +231,12 @@
         height: auto;
     }
 
-    #footer_3 {
-        display: block;
-        margin: 0;
-        float: left;
-        width: 100%;
 
-        height: 60px;
-        overflow: hidden;
-        zoom: 1;
-    }
     .footerdetail {
         font-size: 10px;
         color: #808080;
 
-        width: 100px;
+        width: 120px;
         height: 20px;
         margin-top: 5px;
         float: left;
@@ -704,6 +695,7 @@
     .awoevideoarea {
         margin-bottom: 20px;
         width: auto;
+        margin-top: 10px;
         margin-left: 10px;
         margin-right: 10px;
         height: 200px;
@@ -895,5 +887,46 @@
         background-color: #FFF;
         border: 0px none;
     }
+    .subtitle-music {
+        width: auto;
+        margin-left: 10px;
+        margin-right: 10px;
+        height: auto;
 
+        margin-top: 10px;
+
+        padding: 0;
+        font-size: 20px;
+        color: #808080;
+}
+    .musicinnera {
+        height:auto;
+        width: 100%;
+        font-size: 10px;
+        overflow: hidden;
+        white-space: normal;
+        word-break: break-all;
+        float: left;
+        display: inline-block;
+
+        color: #626262;
+        margin-top: 10px;
+    }
+    .musicinnera .music-brief{
+        display: none;
+    }
+    .musicinnerc {
+        margin-top: 20px;
+        margin-bottom: 10px;
+        width: 100%;
+        height: 200px;
+        display: inline-block;
+
+    }
+    .musicinnerc img {
+        width: 100%;
+        height: 150px;
+        display: inline-block;
+        margin-left: 0;
+    }
 }
