--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -547,10 +547,7 @@ body {
     color: #ffffff;
     text-align: center;
     font-family:Microsoft YaHei;
-    margin-left:40px;
-    margin-right:30px;
-    
-    
+    margin:30px;    
    
 }
 
