--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -542,12 +542,10 @@ body {
     height: 100%;
     font-size: 10px;
     background-color: #ffffff;
-}
-body {
     color: #ffffff;
     text-align: center;
     font-family:Microsoft YaHei;
-    margin:30px;    
+    margin:0 auto;
    
 }
 
@@ -856,14 +854,14 @@ border-image:none;
     .masthead,
     .mastfoot,
     .cover-container {
-        width: 1200px;
+        width: 1280px;
     }
     .searchbg{
-        width:1200px;
+        width:1280px;
 
     }
     .footer_flow{
-        width:1200px;
+        width:1280px;
     }
 }
 
