--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -9,11 +9,11 @@
     padding:35px;
     font-size:20px;
     color:#555555;
-    
+    width:100%;
  }
  .dashline{
     border-bottom:2px dotted #C4C4C4;   
-   
+    width:100%;
     height:auto;
     margin-bottom: 0;
     margin-top: 0;
