--- a/bootstrap/css/main4.css
+++ b/bootstrap/css/main4.css
@@ -39,7 +39,7 @@
     opacity: 0.95;
     filter: alpha(opacity=95);
     height:100px;
-    width: 100%;
+    width: 1400px;
     position: absolute;
     left: 0;
     top:0;
