--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -150,10 +150,11 @@
 }
 
 .relatedvideoarea{
-	width:100%;
+	width:110%;
     display: inline-block;     
     margin-top:30px;
     padding-bottom:5px;
+    margin-left:-53px;
 
 }
 .relatedvideos{
@@ -166,16 +167,16 @@
     border-right:1px solid #d6d6d6;
 }
 .relatedvideos img{
-	margin-left:20px;
-    float:left;
+	
+    float:center;
     height:200px;
     width:350px;  
 }
 .relavideostitle{
-	width:350px;
+	
 	height:50px;
 	font-size:15px;
-	padding-top:220px;
+	padding-top:10px;
 	color:#808080;
 }
 
