--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -660,14 +660,14 @@ border-bottom-color:transparent;
  }
  .awoevideoarea{
     margin-bottom: 20px;
-    width:100%;
-    height:700px;
+    height:auto;
+    width:1280px;
 
 }
 .awoevideoarea video{
-    margin-top: -25px;
-    width:100%;
-    height:700px;
+	margin-top:-15px;
+    width:1280px;
+    height:auto;
 }
  /* musicinner */
 .musicinner-subtitle{
