--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -179,8 +179,9 @@ border-bottom-color:transparent;
 	text-align:left;
     margin-bottom: 0;
     margin-top: 0;
-    padding-bottom:20px;
-	border-bottom:2px dotted #C4C4C4;  
+    padding-bottom:10px;
+	border-bottom:2px dotted #C4C4C4; 
+	color:#808080;
 }
 
 .ulsearch{
