--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -2,7 +2,7 @@
  * Globals
  */
 .headernavul{
-  height:140px;
+  height:162px;
       /*padding-right:30px;*/
 }
 .modal-content{
@@ -218,14 +218,13 @@
     background-color: #fff;
     padding-left:30px;
     padding-right:30px;
-    margin-top:10px;
+    font-size:10px;
     
 }
 .showsearcharea1{
-    height: 30px !important;
-    padding-top:5px!important;
-    padding-bottom: 0px!important;
-    background-color: #fff}
+   background-color: #fff;
+   height:36px;
+    }
 .footerstyle{
     height:200px;
 }
@@ -394,21 +393,43 @@
     display:inline;
     float:right;
     width: 40%;
-    margin-bottom: 20px;
-    margin-top: 150px;
+    margin-bottom: 52px;
+    margin-top: 20px;
+    padding-top:160px;
     text-align: right;
     color:#808080;
+    height:230px;
+}
+.footerrightdiv2{
+margin-top:14px;
 }
 .footerleftdiv{
     display:inline;
-    margin-bottom: 20px;
     margin-top: 20px;
     float:left;
-    width:14%;
-    border-right: 1px solid #bbbbbb;
+    width:164px;
+    border-right: 1px solid #d2d2d2;
     height:230px;
+    margin-bottom:52px;
 }
-
+.footerleftdiv3{
+    display:inline;
+    margin-top: 20px;
+    float:left;
+    width:168px;
+    border-right: 1px solid #d2d2d2;
+    height:230px;
+    margin-bottom:52px;
+}
+.footerleftdiv4{
+    display:inline;
+    margin-top: 20px;
+    float:left;
+    width:187px;
+    border-right: 1px solid #d2d2d2;
+    height:230px;
+    margin-bottom:52px;
+}
 .newborder{
     border: 0px solid #bbbbbb;
     margin-bottom: 0;
@@ -416,10 +437,12 @@
     padding:0;
 }
 .language{
-    padding:0px;
-    margin-left: 15px;
-    margin-top:5px;
+    height:36px;
+    margin-left: 25px;
     float:left;
+    padding-top:12px;
+    font-size:10px;
+
 }
 .search{
     margin-right:15px;
@@ -427,9 +450,11 @@
     float:right;
 }
 .searcharea{
-    margin-top: 5px;
+	 padding-top:12px;
     margin-right:20px;
     float:right;
+    font-size:12px;
+    height:36px;
 }
 
 .dropdowncust{
@@ -574,8 +599,7 @@ body {
 }
 /* Padding for spacing */
 .inner {
-    padding-top:10px;
-    padding-bottom: 15px;
+ width:100%;
 }
 
 
@@ -584,27 +608,23 @@ body {
  */
  .brand_logo{
  border-bottom:1px solid #c0c0c0;
+ height:162px;
  }
-.masthead-brand {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left:35px;
-    text-align: center;
-    height:9px;
-    
-    
+.masthead-brand {   
+    margin-left:42px;   
 }
 .masthead-brand img{
-	height:85px;
+	height:88px;
+	margin-top:37px;
 	
 }
 .masthead-nav > li {
     display: inline-block;
-    height:80px;
-    margin-top:60px;
+    height:162px;
+    padding-top:75px;
 }
 .masthead-nav > li + li {
-   margin-left:20px;
+   margin-left:30px;
 }
 /*.masthead-nav > li > a {
 	height:80px;
@@ -635,32 +655,32 @@ body {
     border-bottom: 2px solid #a9a9a9;
 }*/
 #homeli > a{
-	height:80px;
+	height:87px;
 	width:70px;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
 }
 #homeli  {
     display: inline-block;
-    width:100px;
+    width:70px;
 }
 #homeli > a:hover,a:focus{
 
 	background-color: transparent;
-    border-bottom: 2px solid #a9a9a9;border-image:none;
+    border-bottom: 4px solid #a9a9a9;border-image:none;
 }
 #homeli >a.active{
 	
     background-color: transparent;
-    border-bottom: 2px solid #a9a9a9;border-image:none;
+    border-bottom: 4px solid #a9a9a9;border-image:none;
 }
 
 
 #aboutli > a{
-	height:80px;
+	height:87px;
 	width:70px;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
   
@@ -668,65 +688,63 @@ body {
 #aboutli  {
     display: inline-block;
     width:80px;
-       margin-left:-10px;
 }
 #aboutli > a:hover,a:focus{
 
 	background-color:transparent;
-    border-bottom: 2px solid #a9a9a9;
+    border-bottom: 4px solid #a9a9a9;
     border-image:none;
 }
 #aboutli >a.active{
 	
     background-color: transparent;
-    border-bottom: 2px solid #a9a9a9;
+    border-bottom: 4px solid #a9a9a9;
     border-image:none;
 }
 #ulli > a:hover,a:focus{
 
 	background-color: transparent;
-    border-bottom: 2px solid #A73D49;
+    border-bottom: 4px solid #A73D49;
     border-image:none;
 }
 #ulli >a.active{
 	
     background-color: transparent;
-    border-bottom: 2px solid #A73D49;
+    border-bottom: 4px solid #A73D49;
     border-image:none;
 }
 #ulli > a{
-	height:80px;
+	height:87px;
 	width:70px;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
 }
 #ulli{
   display: inline-block;
-    width:60px;
-    margin-left:5px;
+    width:70px;
 }
 #awoeli > a:hover,a:focus{
 	background-color: transparent;
-    border-bottom: 2px solid #3D5C9A;   	
+    border-bottom: 4px solid #3D5C9A;   	
     border-image:none;
 }
 
 #awoeli >a.active{
 background-color: transparent;
-border-bottom:2px solid #3D5C9A;
+border-bottom:4px solid #3D5C9A;
 border-image:none;
 }
 #awoeli > a{
-    height:80px;
+    height:87px;
 	width:75px;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
 }
 #awoeli {
 	display: inline-block;
-	width:80px;
+	width:75px;
 }
 
 #musicli  {
@@ -737,13 +755,13 @@ border-image:none;
 #musicli > a.active{
 	background-image: url('../images/musicline2.jpg');
  /*   border-image: url('../images/musicline.jpg') 0 0 4 0 ;*/
-    height:80px;
+    height:87px;
     border-bottom-color:transparent;
 }
 #musicli > a{
-	height:80px;
+	height:87px;
 	width:90px;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
     background-color: transparent;
@@ -752,30 +770,32 @@ border-image:none;
 #musicli >a:hover,a:focus{
    background-image: url('../images/musicline2.jpg');
 /*    border-image: url('../images/musicline.jpg') 0 0 4 0 ;*/
-    height:80px;
+    height:87px;
        border-bottom-color:transparent;
 }
 #joinli  {
     display: inline-block;
-    width:80px;
+    width:70px;
+    margin-right:40px;
+  
 }
 #joinli > a {
-    height:80px;
+    height:87px;
 	width:70px;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
 }
 #joinli > a:hover,a:focus{
 
 	background-color: transparent;
-    border-bottom: 2px solid #a9a9a9;
+    border-bottom: 4px solid #a9a9a9;
     border-image:none;
 }
 #joinli >a.active{
 	
     background-color: transparent;
-    border-bottom: 2px solid #a9a9a9;
+    border-bottom: 4px solid #a9a9a9;
     border-image:none;
 }
 /*
