--- a/bootstrap/css/smallScreen.css
+++ b/bootstrap/css/smallScreen.css
@@ -28,12 +28,12 @@
         float: right;
         margin-top: 26px;
         margin-right: 4%;
-
+        background: #dedede;
         display: block;
     }
     .mob_menu:hover{
         cursor: pointer;
-        background: #dedede;
+        background: #c4c4c4;
     }
     .masthead-brand img{
         height:40px;
@@ -222,99 +222,140 @@
         margin: 0;
         float: left;
         width: 100%;
-        border-bottom: 1px solid #BBB;
+        border-top: 1px solid #BBB;
         height: 100px;
         overflow: hidden;
-        zoom: 1;
+
+    }
+    .footerleftdiv3{
+        display: block;
+        margin: 0;
+        float: left;
+        width: 100%;
+        border-top: 1px solid #BBB;
+        height: 100px;
+        overflow: hidden;
+
+    }
+    .footerleftdiv4{
+        display: block;
+        margin-top: 0;
+        float: left;
+        width: 100%;
+        border-top: 1px solid #BBB;
+        height: auto;
+        overflow: hidden;
+        padding-bottom: 10px;
+    }
+    .footertype4 {
+        margin-left: 3px;
+        height: 100%;
+        width:25%;
+        float: left;
+    }
+    .footertype4 img {
+        margin-top: 25px;
+        width: 100%;
+        height: 50px;
+        margin-left: 5%;
+        margin-right: 2px;
+    }
+    .footertype3 {
+        margin-left: 3px;
+        height: 100%;
+        width:25%;
+        float: left;
+    }
+    .footertype3 img {
+        margin-top: 25px;
+        width: 100%;
+        height: 50px;
+        margin-left: 5%;
+        margin-right: 2px;
     }
     .footertype {
         margin-left: 3px;
         height: 100%;
-        width:25%
+        width:25%;
+        float: left;
     }
     .footertype img {
         margin-top: 25px;
         width: 100%;
         height: 50px;
-        margin-left: -5%;
+        margin-left: 5%;
         margin-right: 2px;
     }
-    .footerleftdiv .footerdetials {
+    .footerdetials3 {
         position: relative;
-        top: -80px;
-        left: 35%;
+        top: 10px;
+        left: 10px;
+        width: 70%;
         margin: 0;
-        text-align: left;
+        height: auto;
+
+    }
+   .footerdetials {
+        position: relative;
+        top: 10px;
+        left: 10px;
+        width: 70%;
+        margin: 0;
+        height: auto;
+    }
+    .footerdetials4 {
+        position: relative;
+        top: 10px;
+        left: 10px;
+        width: 70%;
+        margin: 0;
         height: auto;
     }
 
-
-    .footerdetail {
+    .footerdetail3{
         font-size: 10px;
         color: #808080;
-
-        width: 120px;
-        height: 20px;
+        margin-left: 5px;
+        width: 80px;
+        height: 30px;
         margin-top: 5px;
         float: left;
         position:relative;
         vertical-align: top;
         display:inline-block;
     }
-    #footer_3 .footerdetial{
-        height: 100%;
+    .footerdetail {
+        font-size: 10px;
+        color: #808080;
+        margin-left: 5px;
+        width: 80px;
+        height: 30px;
+        margin-top: 5px;
         float: left;
-        width: 50px;
-        margin-top: 0;
-
+        position:relative;
+        vertical-align: top;
+        text-align: left;
+        display:block;
     }
-    #footer_4{
-        width:75%;
-        /*display: -webkit-box;*/
-        /*display: -moz-box;*/
-        /*display: box;*/
-        /*-webkit-box-orient: horizontal;   /!*属性值：[horizontal]横向/[vertical]纵向*!/*/
-        /*-moz-box-orient: horizontal;*/
-        /*box-orient: horizontal;*/
-        overflow: auto;
-    }
-    #footer_4 .footerdetial{
-        width: 100px;
+    .footerdetail4 {
+        font-size: 10px;
+        color: #808080;
+        margin-left: 5px;
+        width: 80px;
+        height: 30px;
+        margin-top: 5px;
         float: left;
         position:relative;
         vertical-align: top;
         display:inline-block;
-        /*margin-top: 0;*/
-        /*-webkit-box-flex: 1;*/
-        /*-moz-box-flex: 1;*/
-        /*box-flex: 1;*/
     }
 
-    /*                   index                */
-    /*.inner {*/
-        /*overflow: hidden;*/
-        /*padding-top: 10px;*/
-        /*padding-bottom: 15px;*/
-    /*}*/
-    /*.homeborder1 {*/
-
-        /*width: 100%;*/
-
-        /*height: 200px;*/
-
-    /*}*/
-    /*.homewrapper1 {*/
-        /*height: 100%;*/
-        /*width: auto;*/
-    /*}*/
-    /*.music-callbacks_nav {*/
-        /*height: 30px;*/
-
-    /*}*/
 
 
 
-    /*               ul                 */
+
+
+
     .plat-map{
         width: 100%;
     }
