--- a/bootstrap/css/smallScreen.css
+++ b/bootstrap/css/smallScreen.css
@@ -800,6 +800,9 @@
         height:auto;
         width: 100%;
     }
+    .progress{
+        display: none;
+    }
     .musiccallbacks_container {
         margin-bottom: 0px;
         position: relative;
@@ -818,26 +821,31 @@
         top: 60%;
     }
     .homeborder {
-        padding: 0px;
-        width: 100%;
-        height: 90px;
-        margin: 10px 10px;
+        float: left;
+        padding: 0;
+        width: auto;
+        height: auto;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 5px;
+
     }
     #left {
-        margin: 0px;
+        margin: 0;
         float: left;
         width: 30%;
-        height: 90px;
+        height: 108px;
     }
     #left img {
-        margin-top: 10px;
+        margin-top: 0;
         height: auto;
         width: 100%;
     }
     #right {
-        margin-left: 30%;
+        float: right;
+        margin: 0;
         width: 70%;
-        height:100%
+        height:auto;
     }
     .homewrapper2 {
         width: 100%;
