--- a/manage/css/sb-admin.css
+++ b/manage/css/sb-admin.css
@@ -609,6 +609,26 @@ ul.alert-dropdown {
 }
 .hpm-footer{
 	width: 100%;
-
-
 }
+.hpm-td0{
+	width: 10%;
+}
+.hpm-td1{
+	width: 15%;
+}
+.hpm-td2{
+	width: 15%;
+}
+.hpm-td3{
+	width: 15%;
+}
+.hpm-td4{
+	width: 10%;
+}
+.hpm-td5{
+	width: 10%;
+}
+.hpm-td6{
+	width: 10%;
+}
+
