--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -379,7 +379,14 @@
 }
 .searchcontent{
     display:inline-block;
-    width:150px;
+    width:18%;
+    height: 17px;
+    color:#808080;
+    margin-bottom:10px;
+}
+.searchcontent-brand{
+    display:inline-block;
+    width:25%;
     height: 17px;
     color:#808080;
     margin-bottom:10px;
@@ -496,18 +503,27 @@ margin-top:14px;
 }
 .searchdetailarea{
     text-align:left;
-    margin-left:20px;
-    margin-right:20px;
+    margin-left:4%;
+    margin-right:4%;
     margin-bottom: 0px;
-    margin-top: 20px;
-    border-bottom: 2px dotted #9e9e9e;
+    margin-top: 25px;
+    border-bottom: 1px dotted #9e9e9e;
     color:#808080;
     background-color: #e8e8e8;
     height:45px;   
 }
 .searchcontentarea{
-    margin-left:20px;
-    margin-right:20px;
+    margin-left:4%;
+    margin-right:4%;
+    margin-bottom: 5px;
+    text-align:left;
+    margin-top:20px;
+    display:none;
+    
+}
+.searchcontentarea-brand{
+    margin-left:4%;
+    margin-right:20%;
     margin-bottom: 5px;
     text-align:left;
     margin-top:20px;
@@ -518,6 +534,8 @@ margin-top:14px;
  padding-top:2px;
  display:none;
  height:20px;
+ width:107%;
+ margin-left:-3%;
  }
  .searchAZli{
 	float:left;
