--- a/bootstrap/css/main4.css
+++ b/bootstrap/css/main4.css
@@ -193,8 +193,9 @@
     height:18px;
     color:#808080;
     float:left;
-    margin-left: 20px;
-
+    text-align:center;
+    width:10px;
+    margin-left:2.9%;
 }
 #searchAToZ a:hover{
     text-decoration: underline;
@@ -203,6 +204,8 @@
 #searchAToZ a:focus {
 background:transparent;
   }
+  
+
 #searchCountry a{
     padding: 2px 5px 2px 5px;
     color: #808080;
