--- a/manage/css/sb-admin.css
+++ b/manage/css/sb-admin.css
@@ -632,3 +632,42 @@ ul.alert-dropdown {
 	width: 10%;
 }
 
+.caselistshow{
+	margin-top: 30px;
+}
+.hpm-tags1{
+	width: 10%;
+}
+.hpm-tags2{
+	width: 10%;
+}
+.hpm-tags3{
+	width:10% ;
+	text-align: center;
+}
+.hpm-tags4{
+	width:10% ;
+	text-align: center;
+}
+.hpm-tags5{
+	width:6% ;
+}
+.hpm-tags5 input{
+	width: 100%;
+}
+.hpm-tags6{
+	width: 10%;
+	text-align: center;
+}
+.hpm-tags7{
+	width: 12%;
+	text-align: center;
+}
+.hpm-tags8{
+	width: 12%;
+	text-align: center;
+}
+.hpm-tags9{
+	width: 14%;
+	text-align: center;
+}
