--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -6,8 +6,8 @@
   text-align:right;
 }
 .modal-content{
-	padding-top:20px;
-	padding-bottom:20px;
+	height:750px;
+	width:674px;
 	border-radius:0;
 }
 .modal-footer{
@@ -19,9 +19,8 @@
     margin-left: 3%;
     margin-right: 3%;
     font-size:16px;
-    margin-top:15px;
-    padding-bottom:8px;
-    margin-bottom:12px;
+    margin-top:48px;
+    padding-bottom:16px;
     color:#5a5a5a;
     border-bottom:1px solid #c8c8c8;
 	
@@ -52,8 +51,9 @@
 .sendbtn{
 	padding-left: 3%;
     padding-right: 3%;
-    margin-top:10px;
+    margin-top:18px;
     border:0;
+    height:30px;
 }
 .jobinfoinput{
     text-align: left;
@@ -70,7 +70,7 @@
     padding-left: 3%;
     padding-right: 3%;
     font-size:10px;
-    margin-top:15px;
+    margin-top:20px;
     color:#5a5a5a;
 }
 .jobcommit{ 
@@ -78,7 +78,7 @@
     padding-top: 30px;
     padding-left: 3%;
     padding-right: 3%;
-    height:80px;
+    margin-bottom:88px;
     
 }
 .jobcommitbtn{ 
@@ -93,10 +93,10 @@
 }
 .jobname{
     text-align: left;
-    margin-top: 30px;
+    margin-top: 60px;
     margin-left: 3%;
     margin-right: 3%;
-    padding-bottom: 30px;
+    padding-bottom: 36px;
     font-size: large;
     font-family: "微软雅黑", "Microsoft Yahei", tahoma, arial, "Hiragino Sans GB";
     color:#808080;
@@ -105,7 +105,7 @@
 
 .gzzz{
     text-align: left;
-    margin-top: 20px;
+    margin-top: 14px;
     margin-left: 3%;
     margin-right: 3%;
     font-size: 10px;
@@ -115,13 +115,14 @@
 
 .departcontent{
     text-align: left;
-    margin-left: 3%;
+    margin-left: 2.5%;
     margin-right: 3%;
     font-family: "微软雅黑", "Microsoft Yahei", tahoma, arial, "Hiragino Sans GB";
     color:#808080;
     font-size: 10px;
     background-color:#fff;
     border:0;
+    line-height:20px;
 }
 
 .homeimagearea2bg{
@@ -151,22 +152,21 @@
 .music-relatedvideoarea{
 	width:100%;
     display: inline-block;     
-    margin-top:30px;
-    padding-bottom:5px;
+
 }
 .relatedvideoarea{
-	width:110%;
+	width:106%;
     display: inline-block;     
-    margin-top:30px;
+    margin-top:43px;
     padding-bottom:5px;
-    margin-left:-53px;
+    margin-left:-28px;
 
 }
 .relatedvideos{
 	float:left;
 	height:220px;
     width:33%;
-    margin-bottom:55px;
+    margin-bottom:69px;
     display: inline-block;
     background-color: #ffffff;
     border-right:1px solid #d6d6d6;
@@ -174,15 +174,13 @@
 .relatedvideos img{
 	
     float:center;
-    height:200px;
-    width:350px;  
+    height:228px;
+    width:392px;  
 }
 .relavideostitle{
-	
-	height:50px;
 	font-size:15px;
-	padding-top:10px;
 	color:#808080;
+    padding-top:18px;
 }
 
 .searchresult{
@@ -257,8 +255,9 @@
 .musictypedetail{
     width:25%;
     float:left;
-    color:#000;
-    margin-bottom:10px;
+    color:#808080;
+    margin-bottom:6px;
+    margin-top:6px;
     text-align:center;
 }
 .musictypedetail2{
@@ -272,9 +271,6 @@
 .diftype{
     width:25%;
     float:left;
-    margin-top:20px;
-    height:150px;
-    margin-bottom:40px;
     border:1px solid #fff;
     color:#808080;
     text-align:center;
@@ -406,15 +402,28 @@
     text-align: right;
     color:#808080;
     height:230px;
+    padding-right:3.4%;
+    font-size:8px;
 }
+
 .footerrightdiv2{
-margin-top:14px;
+margin-top:1px;
+font-size:8px;
 }
-.footerleftdiv{
+.footerleftdiv2{
     display:inline;
     margin-top: 20px;
     float:left;
-    width:164px;
+    width:162px;
+    border-right: 1px solid #d2d2d2;
+    height:230px;
+    margin-bottom:52px;
+}
+.footerleftdiv1{
+    display:inline;
+    margin-top: 20px;
+    float:left;
+    width:162px;
     border-right: 1px solid #d2d2d2;
     height:230px;
     margin-bottom:52px;
@@ -423,7 +432,7 @@ margin-top:14px;
     display:inline;
     margin-top: 20px;
     float:left;
-    width:168px;
+    width:166px;
     border-right: 1px solid #d2d2d2;
     height:230px;
     margin-bottom:52px;
@@ -432,7 +441,7 @@ margin-top:14px;
     display:inline;
     margin-top: 20px;
     float:left;
-    width:187px;
+    width:185px;
     border-right: 1px solid #d2d2d2;
     height:230px;
     margin-bottom:52px;
@@ -554,10 +563,18 @@ margin-top:14px;
 }
 .videoarea{
     margin-bottom: 43px;
-    height:auto;
+    height:720px;
     width:1280px;
 }
 .videoarea video{
+    width:1280px;
+    height:auto;
+}
+.videoareainner{
+    height:720px;
+    width:1280px;
+}
+.videoareainner video{
     width:1280px;
     height:auto;
 }
@@ -904,65 +921,85 @@ border-image:none;
 /* music */
 
 .musictype3{
-
-	margin-bottom:10px;
-    width:50%;
+    margin-top:48px;
+	margin-bottom:48px;
+    width:48%;
     float:left;
-    height:auto;
+    height:58px;
+   
+}
+.musictype4{
+    margin-top:48px;
+	margin-bottom:48px;
+    width:52%;
+    float:left;
+    height:58px;
    
 }
 .musictypetitle3{
-	width:35%;
+	width:31.17%;
     float:left;    
     background-color: #e4e4e4;
-    height:55px;
-    padding:15px;
+    height:58px;
+    padding:20px;
     border:1px solid #fff;
     color:#808080;
 }
 .musictypedetails3{
-    width:65%;
-    height:55px;
+    width:68.83%;
+    height:58px;
     float:left;
     
 }
 .musictypedetail3{
-    width:30%;
+    width:33.3%;
     float:left;
     color:#808080;
-    margin-top:15px;
-    margin-bottom:10px;
+    padding:20px;
     text-align:center;
+}
+.musictypetitle4{
+	width:30.68%;
+    float:left;    
+    background-color: #e4e4e4;
+    height:58px;
+    padding:20px;
+    border:1px solid #fff;
+    color:#808080;
+}
+.musictypedetails4{
+    width:69.32%;
+    height:58px;
+    float:left;
+    
 }
 .musictypedetail4{
     width:20%;
     float:left;
     color:#808080;
-    margin-top:15px;
-    margin-bottom:10px;
+    padding:20px;
     text-align:center;
 }
 .music-relatedvideos{
 	float:left;
-	height:310px;
+	height:380px;
     width:100%;
-    margin-bottom:55px;
     display: inline-block;
     background-color: #ffffff;
     border-top:2px dotted #d6d6d6;
 }
 .music-relatedvideos img{
-	margin-top:40px;
-	margin-left:10px;
+	margin-top:48px;
+
     float:right;
-    height:280px;
-    width:750px;  
+    height:284px;
+    width:62.5%;  
 }
 .music-relavideoinfo{
-	margin-top:30px;
-	width:33%;
+	padding-top:48px;
+	width:37.5%;
 	float:left;
-	margin-right:20px;
+	padding-right:5%;
 }
 .music-relavideostitle{
 	height:50px;
@@ -974,7 +1011,6 @@ border-image:none;
 	text-align:left;
 }
 .music-relavideoremark{
-	height:100px;
 	font-size:12px;
 	color:#808080;
 	float:left;
@@ -984,7 +1020,6 @@ border-image:none;
 	width:100%;
 }
 .music-relavideotime{
-	height:15px;
 	font-size:12px;
 	color:#808080;
 	float:left;
@@ -993,12 +1028,11 @@ border-image:none;
 	width:100%;
 }
 .music-more{
-	height:20px;
 	width:100%;
 	font-size:12px;
 	color:#808080;
 	text-align:left;
-	padding-top:235px;
+	padding-top:230px;
 }
 .music-more img{
 width:60px;
