--- a/bootstrap/css/main4.css
+++ b/bootstrap/css/main4.css
@@ -91,30 +91,33 @@
 
 .subtitle{
     width: 100%;    /* 也可以固定宽度 */
-    height: 180px;
+    height:172px;
     background-color: #e0e0e0;
-    margin-top:-48px;
-    margin-bottom:30px;
-    padding:35px;
+
     font-size:20px;
     color:#808080;
 
 }
 .subtitle .ulinnerb #share .bdsharebuttonbox{
-    margin-left:auto;
+    padding-left:25%;
 }
 .subtitle .ulinnera {
-	height: 120px;
-    width:60%;
+	height:175px;
+    width:70%;
     font-size: 10px;
     overflow: hidden;
     white-space:normal;
     word-break:break-all;
     float: left;
-    padding:0px 25px 10px 10px;
     display: inline-block;
-    border-right:1px solid #a0a0a0;
     color:#626262;
+}
+.subtitle .ulinneracontent{
+	margin-top:35px;
+    margin-bottom:45px;
+    padding-left:20px;
+    padding-right:20px;
+    border-right:1px solid #808080;
 }
 .innertexttitle{
 	font-size:15px;
@@ -131,7 +134,7 @@
 	text-align:left;
 }
 .subtitle .ulinnerc {
-	height: 80px;
+	height:172px;
     width:18%;
     font-size: 10px;
     display: inline-block;
@@ -142,8 +145,8 @@
     padding:10px 25px 10px 10px;
 }
 .subtitle .ulinnerb {
-	height: 100px;
-    width:22%;
+	height:175px;
+    width:30%;
     font-size: 10px;
     overflow: hidden;
     text-align:center;
@@ -151,8 +154,8 @@
     word-break:break-all; ;
     float:right;
     display: inline-block;
-    padding-top:20px;
-    padding-left:45px;
+    padding-top:60px;
+
 }
 .subtitle .ulinnerc .part1{
     float: left;
