--- a/bootstrap/css/main4.css
+++ b/bootstrap/css/main4.css
@@ -91,10 +91,6 @@
 
 .subtitle{
     width: 100%;    /* 也可以固定宽度 */
-    height:172px;
-    background-color: #e0e0e0;
-
-    font-size:20px;
     color:#808080;
 
 }
@@ -102,7 +98,7 @@
     padding-left:25%;
 }
 .subtitle .ulinnera {
-	height:175px;
+	height:172px;
     width:70%;
     font-size: 10px;
     overflow: hidden;
@@ -111,18 +107,21 @@
     float: left;
     display: inline-block;
     color:#626262;
+   background-color: #e0e0e0;
+       margin-bottom:30px;
+   
 }
 .subtitle .ulinneracontent{
 	margin-top:35px;
     margin-bottom:45px;
-    padding-left:20px;
-    padding-right:20px;
-    border-right:1px solid #808080;
+    padding-left:8%;
+    padding-right:11.7%;
+    border-right:1px solid #c0c0c0;
 }
 .innertexttitle{
-	font-size:15px;
+	font-size:18px;
 	text-align:left;
-	margin-bottom:15px;
+	margin-bottom:22px;
 }
 .innertext{
 	font-size:15px;
@@ -130,7 +129,7 @@
 	margin-left:80px;
 }
 .ulinnertext{
-	font-size:15px;
+	font-size:12px;
 	text-align:left;
 }
 .subtitle .ulinnerc {
@@ -145,7 +144,7 @@
     padding:10px 25px 10px 10px;
 }
 .subtitle .ulinnerb {
-	height:175px;
+	height:172px;
     width:30%;
     font-size: 10px;
     overflow: hidden;
@@ -155,6 +154,9 @@
     float:right;
     display: inline-block;
     padding-top:60px;
+    background-color: #e0e0e0;
+        margin-bottom:30px;
+    
 
 }
 .subtitle .ulinnerc .part1{
@@ -289,15 +291,11 @@ background:transparent;
     width: 100%;    /* 也可以固定宽度 */
     height: 560px;
     background-color: #e0e0e0;
-    margin-top:-48px;
-    margin-bottom:30px;
-    padding:35px;
-    font-size:20px;
     color:#808080;
-
+    margin-bottom:30px;
 }
 .musicinnera {
-	height: 480px;
+    margin-top:56px;
     width:65%;
     font-size: 15px;
     overflow: hidden;
@@ -307,16 +305,33 @@ background:transparent;
     display: inline-block;
     border-right:1px solid #a0a0a0;
     color:#626262;
-    margin-top:25px;
 }
 .musicinnerc {
-	 margin-top:25px;
+	 margin-top:56px;
     width:35%;
     display: inline-block;
 }
 .musicinnerc img{
-    width:320px;
+    width:364px;
     height:auto;
     display: inline-block;
-    margin-left:30px;
+    margin:auto;
+}
+.musicinnerb {
+    width:100%;
+    font-size: 10px;
+    overflow: hidden;
+    text-align:center;
+    white-space:normal;
+    word-break:break-all; ;
+    float:right;
+    display: inline-block;
+    background-color: #e0e0e0;
+
+}
+.musicinnerbshare{
+	margin-left:27.5%;
+}
+.musicinnercimg{
+	height:370px;
 }
