--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -43,10 +43,11 @@
 	margin-bottom:42px;
 }
 .brandlogoarea{
-	width:95.31%;
 	margin:auto;
+	width:97.03%;
+	margin-top:10px;
 } 
- 
+
  
  /*
  * ul
@@ -543,16 +544,14 @@ margin-bottom:16px;
  .ptn-border{
  padding:0px;
  width:100%;
- height:700px;
- margin-bottom:43px;
+ height:763px;
 
  }
  .ptn-wrapper{
-  height:700px;
   width:auto;
  }
 .ptn-callbacks_container {
-  margin-bottom: 0px;
+  padding-bottom: 43px;
   position: relative;
   float: right;
   width: 100%;
@@ -594,7 +593,7 @@ border-bottom-color:transparent;
   display: block;
   position: relative;
   z-index: 1;
-  height: 700px;
+  height: 720px;
   width:100%;
   border: 0;
   }
@@ -625,11 +624,21 @@ border-bottom-color:transparent;
   right: 15px;
   }
  .brandlogo{
- width:31.77%;
+ width:32.69%;
  float:left;
+ margin-right:4px;
+ margin-bottom:4px;
+ height:280px;
+ text-align:center;
  }
- 
- 
+ .brandlogo img{
+  vertical-align:middle;
+ }
+ .brandlogospan{
+ height:100%;
+ display:inline-block;
+ vertical-align:middle;
+ }
   /*
  * footer
  */
