--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -369,7 +369,7 @@
 }
 .resetsearch:hover{
     color:#808080;
-    margin-left:10px;
+    margin-left:1.56%;
     text-decoration: none;
 }
 .searchcontent{
@@ -511,18 +511,18 @@ font-size:8px;
 }
 .searchdetailarea{
     text-align:left;
-    margin-left:4%;
-    margin-right:4%;
-    margin-bottom: 0px;
-    margin-top: 25px;
+    margin-left:3.28%;
+    margin-right:3.28%;
+    padding-bottom: 22px;
+    padding-top: 22px;
     border-bottom: 1px dotted #9e9e9e;
     color:#808080;
     background-color: #e8e8e8;
-    height:45px;   
+    height:64px;   
 }
 .searchcontentarea{
-    margin-left:4%;
-    margin-right:4%;
+    margin-left:3.28%;
+    margin-right:3.28%;
     margin-bottom: 5px;
     text-align:left;
     margin-top:20px;
@@ -530,7 +530,7 @@ font-size:8px;
     
 }
 .searchcontentarea-brand{
-    margin-left:4%;
+    margin-left:3.28%;
     margin-right:28.5%;
     margin-bottom: 5px;
     text-align:left;
@@ -538,6 +538,12 @@ font-size:8px;
     display:none;
     
 }
+.searchLocation{
+ padding-top:4px;
+ display:none;
+ height:20px;
+ margin-left:-0.5%;
+ }
 .searchAZ{
  padding-top:2px;
  display:none;
