--- a/bootstrap/css/main3.css
+++ b/bootstrap/css/main3.css
@@ -131,6 +131,7 @@ input[type="checkbox"]:checked {
      float:left;
      height:20px;
      width:30%;
+     margin-left:1.56%;
  }
  #searchcommit{
       float:left;
