--- a/bootstrap/css/main3.css
+++ b/bootstrap/css/main3.css
@@ -62,6 +62,7 @@ input[type=checkbox], input[type=radio] {
    height: 13px;
    vertical-align: middle;
    margin: 0;
+    outline:none;
 }
 .searchItem{
     vertical-align: middle;
@@ -69,6 +70,7 @@ input[type=checkbox], input[type=radio] {
 }
 input[type="checkbox"]:checked {
     background-color:#6D6F70;
+     outline:none;
 }
 .dropdownmenucustLan li{
      width:60px;
